force-app/main/default/objects/JBCXM__OrderTransactionMap__c/JBCXM__OrderTransactionMap__c.object-meta.xml
<CustomObject>
    <description>Junction Object used to link each &quot;Order Type (Booking Type)&quot; with applicable &quot;Transaction Lines&quot;.</description>
    <label>Order Transaction Map</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>OrderTransactionMap Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Transaction Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>