force-app/main/default/objects/JBCXM__OrderTransactionMap__c/fields/JBCXM__Active__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check weather the order transaction type is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>