force-app/main/default/objects/JBCXM__OrderTransactionMap__c/fields/JBCXM__DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__DisplayOrder__c</fullName>
    <inlineHelpText>Display order to be used when displaying the Transactions based on the Booking type.</inlineHelpText>
    <label>Display Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>