force-app/main/default/objects/JBCXM__OrderTransactionMap__c/fields/JBCXM__OrderType__c.field-meta.xml
<CustomField>
    <fullName>JBCXM__OrderType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select Booking Type.</description>
    <inlineHelpText>Select Booking Type.</inlineHelpText>
    <label>Order Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>JBCXM__PickList__c.JBCXM__Category__c</field>
            <operation>equals</operation>
            <value>Order Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>JBCXM__PickList__c</referenceTo>
    <relationshipLabel>Order Transaction Map</relationshipLabel>
    <relationshipName>OrderTransactionMapOrder</relationshipName>
    <type>Lookup</type>
</CustomField>